# mai-dz

./: .gitignore  .stylish-haskell.yaml  Makefile  README.md  TODO  loadCsv.sql  package.yaml  stack.yaml
aw/: Main.hs  MainWindow.hs  Tabs.hs
aw-db/: DB.hs
aw-db/DB/: Instances.hs
aw-qt/: aw-qt.cabal
aw/db/: DB.hs  loadCsv.sql
aw/db/DB/: Instances.hs
clientserver/: .gitignore  CMakeLists.txt  client.c  common.h  server.c
icons/: source.txt
lib/: libqtah.so.0
mpi/: .gitignore  CMakeLists.txt  server.c
perceptron-and/: perceptron.py
perceptron-iris/: iris.ipynb
plan-ga/: .gitignore  Main.hs  package.yaml
plan-ga/Data/STRef/: Extra.hs
rectangle/: Cli.hs  Gui.hs  context.dot  decomp-doc.graphml  decomp-soft.graphml  decomp-test.graphml  decomp-tz.graphml  decomp.graphml  design.dot  lifecycle-out.dot  lifecycle.dot  rectangle.cabal
rectangle/cli/: Main.hs  cli.cabal
rectangle/gui/: Main.hs  gui.cabal
scada/: .gitignore
scada/scada1/: Room.qml  main.qml  qml.qrc
scada/scada2/: .gitignore  ArrowButton.qml  Door.qml  EnterButton.qml  ExitButton.qml  Room.qml  main.qml  qml.qrc
sklearn-iris/: iris.py
sks/: Main.hs
spos-chat/: chat.c
spos/chat/: Makefile
spos/convert/: .travis.yml  CMakeLists.txt
spos/convert/src/: convert.c  convert.h  main.c  ui.c  ui.h
spos/convert/test/: script  suite.hs  watch
