name:           aw-qt
version:        0.0.0
build-type:     Simple
cabal-version:  >= 1.21

library
  build-depends:
      qtah
  reexported-modules:
      Graphics.UI.Qtah.Core.QCoreApplication as QCoreApplication
    , Graphics.UI.Qtah.Core.QVariant as QVariant
    , Graphics.UI.Qtah.Core.Types as QtCore
    , Graphics.UI.Qtah.Event as Qt.Event
    , Graphics.UI.Qtah.Gui.QShowEvent as QShowEvent
    , Graphics.UI.Qtah.Signal as Qt.Signal
    , Graphics.UI.Qtah.Widgets.QAbstractButton as QAbstractButton
    , Graphics.UI.Qtah.Widgets.QAbstractItemView as QAbstractItemView
    , Graphics.UI.Qtah.Widgets.QAction as QAction
    , Graphics.UI.Qtah.Widgets.QApplication as QApplication
    , Graphics.UI.Qtah.Widgets.QBoxLayout as QBoxLayout
    , Graphics.UI.Qtah.Widgets.QGridLayout as QGridLayout
    , Graphics.UI.Qtah.Widgets.QHBoxLayout as QHBoxLayout
    , Graphics.UI.Qtah.Widgets.QLabel as QLabel
    , Graphics.UI.Qtah.Widgets.QLayout as QLayout
    , Graphics.UI.Qtah.Widgets.QLineEdit as QLineEdit
    , Graphics.UI.Qtah.Widgets.QMainWindow as QMainWindow
    , Graphics.UI.Qtah.Widgets.QMessageBox as QMessageBox
    , Graphics.UI.Qtah.Widgets.QPushButton as QPushButton
    , Graphics.UI.Qtah.Widgets.QTabWidget as QTabWidget
    , Graphics.UI.Qtah.Widgets.QToolBar as QToolBar
    , Graphics.UI.Qtah.Widgets.QTreeView as QTreeView
    , Graphics.UI.Qtah.Widgets.QTreeWidget as QTreeWidget
    , Graphics.UI.Qtah.Widgets.QTreeWidgetItem as QTreeWidgetItem
    , Graphics.UI.Qtah.Widgets.QVBoxLayout as QVBoxLayout
    , Graphics.UI.Qtah.Widgets.QWidget as QWidget
  default-language: Haskell2010
